--- a/release-notes/releases-index.json
+++ b/release-notes/releases-index.json
@@ -4,12 +4,12 @@
             "channel-version": "3.0",
             "latest-release": "3.0.0-preview2",
             "latest-release-date": "2019-01-29",
-            "security": "false",
+            "security": false,
             "latest-runtime": "3.0.0-preview-27324-5",
             "latest-sdk": "3.0.100-preview-010184",
             "product": ".NET Core",
             "support-phase": "preview",
-            "eol-date": null,
+            "eol-date": "",
             "releases.json": "https://dotnetcli.blob.core.windows.net/dotnet/release-metadata/3.0/releases.json"
         },
         {
