Fix version-aspnetcoremodule in 2.2/releases.json

--- a/release-notes/2.1/releases.json
+++ b/release-notes/2.1/releases.json
@@ -202,7 +202,7 @@
       "aspnetcore-runtime": {
         "version": "2.1.7",
         "version-display": "2.1.7",
-        "version-aspnetcoremodule": "12.1.18340.7",
+        "version-aspnetcoremodule": [ "12.1.18340.7" ],
         "vs-version": "15.9",
         "files": [
           {
