Fix empty string version-aspnetcoremodule

--- a/release-notes/1.0/releases.json
+++ b/release-notes/1.0/releases.json
@@ -196,9 +196,7 @@
       "aspnetcore-runtime": {
         "version": "1.0.14",
         "version-display": "1.0.14",
-        "version-aspnetcoremodule": [
-          " "
-        ],
+        "version-aspnetcoremodule": null,
         "vsversion": "15.0",
         "files": [
           {
