--- a/release-notes/1.1/releases.json
+++ b/release-notes/1.1/releases.json
@@ -214,9 +214,7 @@
       "aspnetcore-runtime": {
         "version": "1.1.11",
         "version-display": "1.1.11",
-        "version-aspnetcoremodule": [
-          " "
-        ],
+        "version-aspnetcoremodule": null,
         "vsversion": "15.0",
         "files": [
           {
