--- a/release-notes/2.1/releases.json
+++ b/release-notes/2.1/releases.json
@@ -5,7 +5,7 @@
   "latest-runtime": "2.1.8",
   "latest-sdk": "2.1.504",
   "support-phase": "lts",
-  "eol-date": null,
+  "eol-date": "",
   "lifecycle-policy": "https://www.microsoft.com/net/support/policy",
   "releases": [
     {
