--- a/release-notes/2.2/releases.json
+++ b/release-notes/2.2/releases.json
@@ -5,7 +5,7 @@
   "latest-runtime": "2.2.2",
   "latest-sdk": "2.2.104",
   "support-phase": "current",
-  "eol-date": null,
+  "eol-date": "",
   "lifecycle-policy": "https://www.microsoft.com/net/support/policy",
   "releases": [
     {
