Fix empty string versions

--- a/release-notes/3.0/releases.json
+++ b/release-notes/3.0/releases.json
@@ -17,7 +17,7 @@
       "runtime": {
         "version": "3.0.0-preview9-19423-09",
         "version-display": "3.0.0-preview9-19423-09",
-        "vs-version": "",
+        "vs-version": null,
         "files": [
           {
             "name": "dotnet-apphost-pack-x64.deb",
@@ -235,7 +235,7 @@
         "version": "3.0.100-preview9-014004",
         "version-display": "3.0.100-preview9-014004",
         "runtime-version": "3.0.0-preview9-19423-09",
-        "vs-version": "",
+        "vs-version": null,
         "vs-support": "Visual Studio 2019 (v16.3, latest preview)",
         "csharp-version": "8.0-preview",
         "fsharp-version": "4.6",
@@ -350,7 +350,7 @@
           "version": "3.0.100-preview9-014004",
           "version-display": "3.0.100-preview9-014004",
           "runtime-version": "3.0.0-preview9-19423-09",
-          "vs-version": "",
+          "vs-version": null,
           "vs-support": "Visual Studio 2019 (v16.3, latest preview)",
           "csharp-version": "8.0-preview",
           "fsharp-version": "4.6",
@@ -465,7 +465,7 @@
         "version": "3.0.0-preview9.19424.4",
         "version-display": "3.0.0-preview9.19424.4",
         "version-aspnetcoremodule": ["13.0.19236"],
-        "vs-version": "",
+        "vs-version": null,
         "files": [
           {
             "name": "aspnetcore-runtime-linux-arm.tar.gz",
@@ -579,7 +579,7 @@
       "runtime": {
         "version": "3.0.0-preview8-28405-07",
         "version-display": "3.0.0-preview8-28405-07",
-        "vs-version": "",
+        "vs-version": null,
         "files": [
           {
             "name": "dotnet-host-x64.deb",
@@ -779,7 +779,7 @@
         "version": "3.0.100-preview8-013656",
         "version-display": "3.0.100-preview8-013656",
         "runtime-version": "3.0.0-preview8-28405-07",
-        "vs-version": "",
+        "vs-version": null,
         "vs-support": "Visual Studio 2019 (v16.3, latest preview)",
         "csharp-version": "8.0-preview",
         "fsharp-version": "4.6",
@@ -894,7 +894,7 @@
           "version": "3.0.100-preview8-013656",
           "version-display": "3.0.100-preview8-013656",
           "runtime-version": "3.0.0-preview8-28405-07",
-          "vs-version": "",
+          "vs-version": null,
           "vs-support": "Visual Studio 2019 (v16.3, latest preview)",
           "csharp-version": "8.0-preview",
           "fsharp-version": "4.6",
@@ -1009,7 +1009,7 @@
         "version": "3.0.0-preview8.19405.7",
         "version-display": "3.0.0-preview8.19405.7",
         "version-aspnetcoremodule": ["13.0.19218.0"],
-        "vs-version": "",
+        "vs-version": null,
         "files": [
           {
             "name": "aspnetcore-runtime-linux-arm.tar.gz",
