--- a/release-notes/releases-index.json
+++ b/release-notes/releases-index.json
@@ -27,6 +27,7 @@
           {
             "channel-version": "2.1",
             "latest-release": "2.1.13",
+            "latest-release-date": "2019-09-10",
             "security": true,
             "latest-runtime": "2.1.13",
             "latest-sdk": "2.1.802",
