Change 3.1 releases.json url to github

--- a/release-notes/releases-index.json
+++ b/release-notes/releases-index.json
@@ -10,7 +10,7 @@
             "product": ".NET Core",
             "support-phase": "preview",
             "eol-date": null,
-            "releases.json": "https://dotnetcli.blob.core.windows.net/dotnet/release-metadata/3.1/releases.json"
+            "releases.json": "https://github.com/arthurrump/dotnet-core/raw/github-url/release-notes/3.1/releases.json"
         },
         {
             "channel-version": "3.0",
